--- a/templates/base.html
+++ b/templates/base.html
@@ -5,17 +5,59 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %} {% endblock %}</title>
-        <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}" />
+        <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/logo.png') }}" />
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
         <!-- Bootstrap -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <!-- Graphviz -->
         <script src="//d3js.org/d3.v5.min.js"></script>
         <script src="https://unpkg.com/@hpcc-js/wasm@0.3.11/dist/index.min.js"></script>
         <script src="https://unpkg.com/d3-graphviz@3.0.5/build/d3-graphviz.js"></script>
     </head>
-    <body>
-        {% block body %} {% endblock %}
+    <body class="bg-green-s">
+        <nav class="navbar navbar-expand-lg bg-green-t sticky-top shadow">
+            <div class="container-lg">
+                <a class="navbar-brand fw-semibold text-white" href="./">
+                    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="" width="30" height="30" class="d-inline-block align-text-top">
+                    NutriApp
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" aria-current="page" href="/">Beranda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/app">Aplikasi</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/about">Tentang</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <main class="container-lg">
+            {% block body %}{% endblock %}
+        </main>
+        <div class="container-lg">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <div class="col-md-4 d-flex align-items-center">
+                <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                    <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
+                </a>
+                <span class="mb-3 mb-md-0 text-muted">&copy; 2022 NutriApp</span>
+                </div>
+                <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+                <li class="ms-3"><a class="text-muted" href="#">GitHub
+                    <i class="bi bi-github"></i>
+                </a></li>
+                </ul>
+            </footer>
+        </div>
         <script src="{{ url_for('static', filename='scripts/scripts.js') }}"></script>
         <!-- Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
