fix some margin

--- a/templates/about.html
+++ b/templates/about.html
@@ -18,23 +18,22 @@
     <div class="row text-center pb-5">
         <h1 class="display-6 fw-bold mb-3 pb-5">Pengembang <span class="text-orange-s">NutriApp</span></h1>
         <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+            <img width="140" height="140" class="img-fluid" src="{{ url_for('static', filename='images/putu.png') }}" alt="">
             <h2 class="fs-4 mt-3 fw-bold">Nama Anda</h2>
             <p class="fs-6">NIM 2108561XXX</p>
         </div>
         <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
+            <img width="140" height="140" class="img-fluid" src="{{ url_for('static', filename='images/putu.png') }}" alt="">
             <h2 class="fs-4 mt-3 fw-bold">Nama Anda</h2>
             <p>NIM 2108561XXX</p>
         </div>
         <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+            <img width="140" height="140" class="img-fluid" src="{{ url_for('static', filename='images/putu.png') }}" alt="">
             <h2 class="fs-4 mt-3 fw-bold">Nama Anda</h2>
             <p>NIM 2108561XXX</p>
         </div>
         <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+            <img width="140" height="140" class="img-fluid" src="{{ url_for('static', filename='images/putu.png') }}" alt="">
             <h2 class="fs-4 mt-3 fw-bold">Nama Anda</h2>
             <p>NIM 2108561XXX</p>
         </div>
@@ -43,7 +42,7 @@
 <section class="pb-5 mb-5">
     <div class="row align-items-md-stretch text-center pb-5 mb-3">
         <h1 class="display-6 fw-bold mb-3 pb-5">Teknologi <span class="text-orange-s">NutriApp</span></h1>
-        <div class="col-md-6">
+        <div class="col-md-6 mb-3 mb-lg-0">
             <div class="h-100 p-4 rounded-3 btn-orange-reverse shadow">
                 <h2 class="fs-3 mt-3 fw-bold">Flask</h2>
                 <hr>
@@ -76,7 +75,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 mt-3 mt-lg-0">
             <div class="shadow-lg">
                 <img class="img-fluid overflow-hidden rounded rounded-2 shadow-lg" src="{{ url_for('static', filename='images/githubweb.png') }}" alt="">
             </div>
