--- a/templates/app.html
+++ b/templates/app.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %} NutriApp | Aplikasi {% endblock %}
 {% block body %}
-    <section class="mt-3">
+    <section class="mt-3 min-vh-100">
         <form action="" method="post">
             <div class="mb-3">
                 <p class="lead fw-semibold">Batas Berat:</p>
