--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 {% block title %} NutriApp | Beranda {% endblock %}
 {% block body %}
     <section class="container-lg col-xxl-8 px-4 py-5">
-        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="row flex-lg-row-reverse align-items-center justify-content-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
                 <img src="{{ url_for('static', filename='images/hero.png') }}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 text-center text-lg-start">
                 <h1 class="display-6 fw-bold lh-sm mb-3 text-slate">Pemilihan Nutrisi Jadi Mudah dengan <span class="text-orange-s">NutriApp</span></h1>
                 <p class="lead">Dapatkan pilihan makanan yang mengandung protein tertinggi dengan cepat dan akurat.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
@@ -66,11 +66,11 @@
         </div>
     </section>
     <section class="container-lg col-xxl-8 px-4 py-5">
-        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="row flex-lg-row-reverse align-items-center justify-content-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
                 <img src="{{ url_for('static', filename='images/footer.png') }}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 text-center text-lg-start">
                 <h1 class="display-6 fw-bold lh-sm mb-3 text-slate">Pilih Makanan Bernutrisi dengan <span class="text-orange-s">NutriApp!</span></h1>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                     <a href="/app">
