--- a/templates/app.html
+++ b/templates/app.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 {% block title %} NutriApp | Aplikasi {% endblock %}
 {% block body %}
-    <section class="mt-3 min-vh-100">
+    <section data-aos="fade-up" class="mt-3 min-vh-100">
         <form action="" method="post">
             <div class="mb-3">
                 <p class="lead fw-semibold">Batas Berat:</p>
                 <input type="number" name="limit" class="form-control p-2" id="limit" aria-describedby="limitHelp" required>
-                <p class=" ">Masukkan batas berat makanan (dalam gram), contoh: 500</p>
+                <p class=" ">Masukkan batas berat makanan (dalam gram), contoh: <span class="fw-bold">500</span></p>
             </div>
             <div class="mb-3">
                 <p class="lead fw-semibold">Daftar Makanan:</p>
-                <textarea class="form-control" name="detail" id="detail" rows="5" required
-                placeholder="Contoh:&#10;nasi ketan, 3, 12&#10;kentang, 7, 42&#10;ayam bakar, 5, 25&#10;ikan bakar, 4, 40"></textarea>
+                <textarea class="form-control" name="detail" id="detail" rows="6" required
+                placeholder="Contoh:&#10;nasi putih, 300, 21.3&#10;telur, 60, 7.5&#10;daging ayam, 110, 25.41&#10;ikan bakar, 95, 26.19"></textarea>
                 <p class="">Masukkan daftar menu makanan dengan format: <span class="fw-bold">
                     nama, berat, protein
                 </span> 
