--- a/templates/base.html
+++ b/templates/base.html
@@ -10,12 +10,18 @@
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <!-- AOS -->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <!-- Graphviz -->
         <script src="//d3js.org/d3.v5.min.js"></script>
         <script src="https://unpkg.com/@hpcc-js/wasm@0.3.11/dist/index.min.js"></script>
         <script src="https://unpkg.com/d3-graphviz@3.0.5/build/d3-graphviz.js"></script>
     </head>
     <body class="bg-green-s">
+        <script>
+            AOS.init();
+        </script>
         <nav class="navbar navbar-expand-lg bg-green-t sticky-top shadow">
             <div class="container-lg">
                 <a class="navbar-brand fw-semibold text-white" href="./">
@@ -52,7 +58,7 @@
                 <span class="mb-3 mb-md-0 text-muted">&copy; 2022 NutriApp</span>
                 </div>
                 <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3"><a class="text-muted" href="#">GitHub
+                <li class="ms-3"><a class="text-muted" href="https://github.com/putuwaw/nutriapp">GitHub
                     <i class="bi bi-github"></i>
                 </a></li>
                 </ul>
