--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %} NutriApp | Beranda {% endblock %}
 {% block body %}
-    <section class="container-lg col-xxl-8 px-4 py-5">
+    <section data-aos="fade-up" class="container-lg col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center justify-content-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
                 <img src="{{ url_for('static', filename='images/hero.png') }}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
@@ -18,8 +18,8 @@
         </div>
     </section>
     <section id="mulai" class="px-4 pt-5 my-5 text-center border-bottom">
-        <h1 class="display-6 fw-bold pt-lg-5 pb-2">Apa itu <span class="text-orange-s">NutriApp?</span></h1>
-        <div class="col-lg-6 mx-auto">
+        <h1 data-aos="fade-up" class="display-6 fw-bold pt-lg-5 pb-2">Apa itu <span class="text-orange-s">NutriApp?</span></h1>
+        <div data-aos="fade-up" class="col-lg-6 mx-auto">
             <p class="lead mb-4">NutriApp adalah sebuah aplikasi berbasis website atau web app yang mampu untuk melakukan pemilihan makanan dengan kandungan protein tertinggi, sehingga Anda tidak bingung dalam memilih makanan.</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
                 <a href="/about">
@@ -27,15 +27,15 @@
                 </a>
             </div>
         </div>
-        <div class="overflow-hidden" style="max-height: 30vh;">
+        <div data-aos="fade-up" class="overflow-hidden" style="max-height: 30vh;">
             <div class="container px-5">
                 <img src="{{ url_for('static', filename='images/section.png') }}" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
             </div>
         </div>
     </section>
     <section class="container px-4 py-5">
-        <h1 class="display-6 fw-bold pt-lg-5 pb-2 text-center mt-lg-5">Mengapa harus <span class="text-orange-s">NutriApp?</span></h1>
-        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+        <h1 data-aos="fade-up" class="display-6 fw-bold pt-lg-5 pb-2 text-center mt-lg-5">Mengapa harus <span class="text-orange-s">NutriApp?</span></h1>
+        <div data-aos="fade-up" class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col">
                 <div class="w-100 d-flex flex-column text-center align-items-center justify-content-center">
                     <div class="feature-icon w-25 d-inline-flex align-items-center justify-content-center bg-orange-s bg-gradient fs-2 mb-3">
@@ -65,7 +65,7 @@
             </div>
         </div>
     </section>
-    <section class="container-lg col-xxl-8 px-4 py-5">
+    <section data-aos="fade-up" class="container-lg col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center justify-content-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
                 <img src="{{ url_for('static', filename='images/footer.png') }}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
