--- a/templates/about.html
+++ b/templates/about.html
@@ -69,7 +69,7 @@
                     <a href="https://github.com/putuwaw/nutriapp">
                         <button type="button" class="shadow btn btn-orange btn-lg px-4 me-md-2 text-white">Source Code</button>
                     </a>
-                    <a href="https://github.com/putuwaw/nutriapp">
+                    <a href="https://github.com/putuwaw/nutriapp/tree/main/docs">
                         <button type="button" class="shadow btn btn-orange btn-lg px-4 me-md-2 text-white">Laporan</button>
                     </a>
                 </div>
